# sentinel-ai-gateway

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  otel-config.yaml  prometheus.yml  pyproject.toml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  EXAMPLES.md  GUARDRAILS.md  QUICKSTART.md  README.md  SETUP.md  TROUBLESHOOTING.md
grafana/provisioning/dashboards/: dashboard.yml
grafana/provisioning/dashboards/sentinel/: sentinel-gateway.json
src/sentinel/: __init__.py  main.py
src/sentinel/core/: circuit_breaker.py  config.py  telemetry.py  validators.py
src/sentinel/guardrails/: __init__.py  base.py  engine.py
src/sentinel/guardrails/modules/: __init__.py  pii.py  security.py
src/sentinel/middleware/: __init__.py  proxy.py
src/sentinel/services/: llm_client.py
tests/: conftest.py  test_engine.py  test_guardrails.py
